[HABRI][#355] Fixed extra spacing in resource tabs

--- a/templates/habricentral/html/com_resources/resources.css
+++ b/templates/habricentral/html/com_resources/resources.css
@@ -12,7 +12,7 @@
 	background:whiteSmoke;
 }
 #sub-menu li a span {
-	padding-left: 20px;
+	/* padding-left: 20px; */
 	padding-right: 0;
 }
 
